# bevy_minesweeper

./: Cargo.toml
board_plugin/: Cargo.toml
board_plugin/src/: events.rs  lib.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  cordinates.rs  mod.rs  uncover.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
src/: main.rs
