[package]
name = "bevy_workspace"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.14.0"
board_plugin = {path = "board_plugin"}
bevy-inspector-egui = {version = "0.25.1", optional = true}

[workspace]
members = [
    "board_plugin"
]
